Use class "preformat" for Comments, Refs, and Diff  parts of the History records in entr.tal and edconf.tal.  This preserves line breaks but still wraps long lines  and so eliminates the need for function jmcgi.fix_diff().

--- a/web/jmdict.css
+++ b/web/jmdict.css
@@ -11,7 +11,8 @@
 .caution	{color: #FF0000}
 .notice		{font-size: 55%; color: #FF0000}
 .notes		{font-size: 75%;}
-.preformat	{margin-left: 2em; white-space: pre-wrap; font-family: monospace}
+.preformat	{margin-left: 2em; white-space: pre-wrap;
+		 font-size:110%; font-family: monospace}
 .hist,.histtab	{border-style: solid; border-width: thin; border-color: #A0A0A0; 
 		 padding: 5px; font-size: 75%}
 .submitter_name {font-weight: 700}
